Fix math formulas being unreadable

--- a/wikipedia-dark.css
+++ b/wikipedia-dark.css
@@ -178,7 +178,7 @@
   }
 
   /*** invert images ***/
-  img[title="Wikipedia"], .bookshelf-container .bookend, img.mwe-math-fallback-png-inline,
+  img[title="Wikipedia"], .bookshelf-container .bookend, img.mwe-math-fallback-image-inline,
   #mw-wsmfinal-close {
     filter: url("data:image/svg+xml;utf8, <svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'i\'><feColorMatrix color-interpolation-filters=\'srgb\' values=\'-1 0 0 0 1 0 -1 0 0 1 0 0 -1 0 1 0 0 0 1 0\'/></filter></svg>#i");
     -webkit-filter: invert(100%) !important;
